--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1{
 .orange-color{
     color: rgba(255, 166, 0, 0.842);
 }
-section{
+.flexible-container{
     display: flex;
     margin: 30px;
 }
