--- a/style.css
+++ b/style.css
@@ -43,3 +43,8 @@ h1{
 .full-web{
     border-image: linear-gradient(#f6b73c, #4d9f0c) 30;
 }
+footer{
+    text-align: center;
+    font-size: x-large;
+    font-style: italic;
+}
